deployment/svc-ingress.yaml
apiVersion: v1
kind: Service
metadata:
  name: app-#USER#-service-blue
  namespace: #USER#
spec:
  selector:
    app: app-user-blue
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: app-#USER#-ingress
  namespace: #USER#
spec:
  rules:
  - host: #USER#.cicdworkshop.ezylinux.com
    http:
      paths:
      - backend:
          serviceName: app-#USER#-service-blue
          servicePort: 80
